<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context="com.example.circle.NewUserActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="140dp"
        android:textColor="#ffbb77"
        android:textSize="28sp"
        android:text="@string/first_use" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_marginTop="20dp"
        android:text="@string/name_label"
        android:textColor="#ffbb77"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/button1"
        android:ems="10"
        android:textSize="18sp"
        android:textColor="#e0e0e0"
        android:textColorHint="#e0e0e0"
        android:hint="@string/name_hint" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText1"
        android:layout_alignBottom="@+id/editText1"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:background="#e0e0e0"
        android:text="@string/OK" 
        android:onClick="CreateName"/>

</RelativeLayout>
